reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__enum_rename.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestEnumRename>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::serde::MyEnum"
      },
      "output_type": {
        "name": "reflect_demo::tests::serde::MyEnum"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::serde::MyEnum",
        "variants": [
          {
            "name": "V1"
          },
          {
            "name": "V2"
          }
        ]
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::serde::MyEnum",
        "variants": [
          {
            "name": "V1"
          },
          {
            "name": "V2"
          }
        ]
      }
    ]
  }
}
