reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__enum_rename_all.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestEnumRenameAll>()"
---
{
  "name": "",
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::serde::TestEnumRenameAll",
        "variants": [
          {
            "name": "fieldName"
          }
        ]
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::serde::TestEnumRenameAll",
        "variants": [
          {
            "name": "fieldName"
          }
        ]
      }
    ]
  }
}
