reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__enum_tag-2.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_typescript_code::<TestEnumTag>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflect-cli
//
// Schema name: 
// 




/// 8-bit unsigned integer
export type u8 = TODO;


export namespace reflect {

/// Struct object with no fields
export interface Empty {
    }


/// Error object which is expected to be never returned
export interface Infallible {
    }

}

export namespace reflect_demo {

export namespace tests {

export namespace serde {

export type TestEnumTag =
    | {type: Variant1,
field_name: u8}
    | type: Variant2,
u8
    ;

}
}
}
